fix container spacing

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer .container {
     display: flex;
-    justify-content: space-between;
-    gap: 2rem;
+    justify-content: space-evenly;
+    gap: 5rem;
 }
 
 .right {
